chore: typhography headers

--- a/lib/components/Typography/typography.scss
+++ b/lib/components/Typography/typography.scss
@@ -53,6 +53,10 @@
             }
 
             @include semantic-typography-body-xl-regular-default();
+
+           // Add the Bold / Italic / Underline rules below. 
+
+
         }
     }
 
